Documentation outline for usecplugin
Change-Id: Id2afe28ee2c0100d14c6850400b0f319383fa7ad
Signed-off-by: rafat <rafat.jahan@tcs.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -111,6 +111,8 @@ include::ttp/ttp-cli-tools-dev.adoc[]
 
 include::usc/odl-usc-channel-dev.adoc[]
 
+include::usecplugin/odl-usecplugin-dev.adoc[Controller Shield]
+
 include::vtn/vtn-dev.adoc[]
 
 include::yangtools/yangtools.adoc[]
