Documentation outline for centinel.
Change-Id: If9508f58cb1fe5a37cc13fedf0df77025a393e8a
Signed-off-by: amandeep <rattenpal.amandeep@tcs.com>

--- a/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
@@ -79,6 +79,8 @@ include::opflex/agent-ovs-install.adoc[]
 
 include::ovsdb/ovsdb-install.adoc[]
 
+include::centinel/centinel-install.adoc[]
+
 include::tsdr/tsdr-h2-install.adoc[]
 
 include::tsdr/tsdr-hbase-install.adoc[]
