fixing LISP flow mapping addr format table
Change-Id: Iea58a7a737c8e439aa3235a39dec21039a8c926a
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/user-guide/src/main/asciidoc/lfm/lispflowmapping-msmr-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/lfm/lispflowmapping-msmr-user.adoc
@@ -164,7 +164,7 @@ along with their AFI number and LCAF type, including the prefix used for
 disambiguation of potential overlap, and examples output.
 
 .LISP Address Formats
-[align="right",options="header",cols="<s,>,>,<,<l"]
+[align="right",options="header",cols="<2s,>,>,<,<4l"]
 |=====
 |         Name           |  AFI  | LCAF |  Prefix  |  Text Rendering
 | No Address             |     0 |    - | no:      | No Address Present
