--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -111,6 +111,8 @@ include::ttp/ttp-cli-tools-dev.adoc[]
 
 include::usc/odl-usc-channel-dev.adoc[]
 
+include::usecplugin/odl-usecplugin-dev.adoc[]
+
 include::vtn/vtn-dev.adoc[]
 
 include::yangtools/yangtools.adoc[]
