--- a/manuals/getting-started-guide/src/main/asciidoc/ch-dlux.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/ch-dlux.adoc
@@ -4,7 +4,7 @@ This section introduces you to the OpenDaylight User Experience (DLUX) applicati
 
 === Getting Started with DLUX
 
-DLUX provides a number of different Karaf features, which you can enable and disable separately. In Lithium they are:
+DLUX provides a number of different Karaf features, which you can enable and disable separately. In Beryllum they are:
 . odl-dlux-core
 . odl-dlux-node
 . odl-dlux-yangui
