--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -119,6 +119,8 @@ include::vtn/vtn-dev.adoc[]
 
 include::yangtools/yangtools.adoc[]
 
+include::yang-push/odl-yang-push-dev.adoc[YANG-PUSH]
+
 :numbered!:
 
 ///////
