Documentation outline for for of-config.
Change-Id: I6df4d830fb2358de0fabd94bb39317f034d1e6fa
Signed-off-by: hu.rui <hu.rui2@zte.com.cn>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -84,6 +84,8 @@ include::neutron/neutron.adoc[]
 
 include::sdninterfaceapp/odl-sdninterfaceapp-all-dev.adoc[]
 
+include::of-config/of-config-dev.adoc[]
+
 include::openflowjava/odl-openflowjava-protocol-dev.adoc[]
 
 include::opflex/agent-ovs-dev.adoc[]
