Updates to sfcofl2
- Addressing code review comments

Change-Id: I90a282117f9e9e9a35d8dcb69bf05c104f819383
Signed-off-by: Brady Johnson <brady.allen.johnson@ericsson.com>

--- a/manuals/user-guide/src/main/asciidoc/sfc/sfc.adoc
+++ b/manuals/user-guide/src/main/asciidoc/sfc/sfc.adoc
@@ -10,7 +10,7 @@ include::odl-sfc-ovs-user.adoc[SFC OVS User guide]
 
 include::odl-sfc-classifier-user.adoc[SFC Classifier configuration User guide]
 
-include::odl-sfcofl2-user.adoc[SFC OpenFlow Layer2 Renderer user guide]
+include::odl-sfcofl2-user.adoc[SFC OpenFlow Renderer user guide]
 
 include::odl-sfc-sf-scheduler-user.adoc[Service Function selection scheduler]
 
